@@ -14,6 +14,7 @@ void ttHMultilepton::Tau::BootstrapTree(std::shared_ptr<top::TreeManager> tree, 
   CreateBranch(tree, &eta,             "tau_eta_",              index);
   CreateBranch(tree, &phi,             "tau_phi_",              index);
   CreateBranch(tree, &charge,          "tau_charge_",           index);
+  CreateBranch(tree, &e,               "tau_E_",                index);
   CreateBranch(tree, &BDTJetScore,     "tau_BDTJetScore_",      index);
   CreateBranch(tree, &JetBDTSigLoose,  "tau_JetBDTSigLoose_",   index);
   CreateBranch(tree, &JetBDTSigMedium, "tau_JetBDTSigMedium_",  index);
