@@ -28,6 +28,7 @@ namespace ttHMultilepton {
     float  d0;
     float  z0;
     float  vz;
+    float  deltaz0;
     float  Z0SinTheta;
     float  MagD0;
     float  Pt;
